--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -6216,16 +6216,16 @@ button.close {
   margin: 1px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #000 \9;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid #fff;
+  background-color: blue;
+  background-color: blue;
+  border: 1px solid blue;
   border-radius: 10px;
 }
 .carousel-indicators .active {
   width: 12px;
   height: 12px;
   margin: 0;
-  background-color: #fff;
+  background-color: rgb(33, 142, 243);
 }
 .carousel-caption {
   position: absolute;
