--- a/stylesheets/bootstrap.css
+++ b/stylesheets/bootstrap.css
@@ -6216,16 +6216,15 @@ button.close {
   margin: 1px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: blue;
-  background-color: blue;
-  border: 1px solid blue;
+  background-color: rgb(106, 208, 255);
+  border: 1px solid rgb(106, 208, 255);;
   border-radius: 10px;
 }
 .carousel-indicators .active {
   width: 12px;
   height: 12px;
   margin: 0;
-  background-color: rgb(33, 142, 243);
+  background-color: rgb(22, 128, 226);
 }
 .carousel-caption {
   position: absolute;
