--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3116,6 +3116,29 @@ body.mac .dropcap {
 	background-color: #337ab7;
 }
 
+.blink {
+    animation: blinker 0.6s linear infinite;
+    color: #b62828;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: sans-serif;
+    }
+    @keyframes blinker {  
+    50% { opacity: 0; }
+    }
+    .blink-one {
+    animation: blinker-one 1s linear infinite;
+    }
+    @keyframes blinker-one {  
+    0% { opacity: 0; }
+    }
+    .blink-two {
+    animation: blinker-two 1.4s linear infinite;
+    }
+    @keyframes blinker-two {  
+    100% { opacity: 0; }
+    }
+
 
 
 /* icon-list */
